--- a/projecto/projecto/usuario/templates/usuario/index.html
+++ b/projecto/projecto/usuario/templates/usuario/index.html
@@ -218,7 +218,7 @@
             <ul>
               <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
               <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
             </ul>     
           </div>
